# k3

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/cli/: cli.rs  command.rs  llm.rs  mod.rs  xh_model.rs
src/common/: k3error.rs  mod.rs  utils.rs
src/config/: settings.rs
